# Border-Agents

./: .env.example  .gitignore  AGENTS.md  Border-Agents.code-workspace  LICENSE  README.md  Session_Start_Here.md  What It Is, what it could be.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts
characters/: README-Characters.md  README.md  global-idle-animations.md
characters/crab/: manifest.json
characters/hermes/: manifest.json
characters/owl/: manifest.json
components/: BorderDock.css  BorderDock.tsx  BrowserBuddyDock.tsx  DesktopBorderDock.tsx
components/buddy/: ActionReceiptCard.tsx  BuddyActionMenu.tsx  BuddyPanel.tsx  BuddySettingsDialog.tsx  BuddySurface.tsx  BuddyUiBubble.tsx  OnboardingWizardPanel.tsx  buddy-surface.css  useUiBubble.ts
components/trust-workbench/: TrustWorkbenchPanel.tsx  TrustWorkbenchPreview.css  TrustWorkbenchPreview.tsx
desktop-body/: Cargo.toml  README.md
desktop-body/src/: main.rs  presence.rs  render.rs
docs/: ARCHITECTURE.md  COMPASS_IMPL_PLAN.md  COMPOSER_AUDIT.md  CORE_PATROL.md  FIX_LIST.md  HERMES_GATEWAY.md  OVERLAY_POSTMORTEM_AND_REBUILD_PLAN.md  PLAYWRIGHT_FOR_AI_AGENTS.md  REPO_MAP.md  ROADMAP.md  ROUNDTABLE_DESKTOP_BUDDY_UI_CHALLENGE.md  ROUNDTABLE_tauri_linux_overlay_challenge.md  SPEC_MEMORY_GRADING.md  STEP4_WIRE_THE_SOUL_PLAN.md  UI-fixes-plan.md  UX.md  WIZARD_ONBOARDING_SCRIPT.md  laminal-ring-pivot.md
e2e/: README.md  dock-controls.spec.ts  governance-act-effector.spec.ts  governance-action.spec.ts  governance-surfaces.spec.ts  smoke.spec.ts
extensions/browser/: background.js  buddies.css  content.js  hermes.js  manifest.json  popup.html  popup.js  presence.js  profiles.js
fixtures/: presence-v0.json
scripts/: bb-body.sh  bb-browser.sh  bb-clean.sh  bb-forge-stack.sh  bb-frame.sh  bb-gateway.sh  bb-lib.sh  bb-report.sh  bb-soul.sh  bb-spawn.sh  bb-start-all.sh  bb-start.sh  bb-stop.sh  bb-wizard-host.sh  gateway-dev.mjs  gen-presence-fixtures.ts  harm-demo.ts  liveEffectorExecutors.ts  liveLocalChat.ts  soul-server.ts
scripts/__tests__/: commandOnPath.test.ts  liveEffectorExecutors.test.ts  liveLocalChat.test.ts
src/: bbDiagnostics.ts  buddyCapabilities.ts  buddyManifest.ts  buddyProfiles.ts  dockSelfHeal.ts  dockSettings.ts  effectorExecutors.ts  gatewayClient.ts  gatewayProtocol.ts  gatewaySettings.ts  governanceSurfaceCopy.ts  lifecycleReceipts.ts  liveGovernance.ts  main.tsx  onboardingPanelModel.ts  onboardingSurfaceState.ts  presenceFixtures.ts  presenceProtocol.ts  receiptLedger.ts  soulActions.ts  styles.css  surfaceManifest.ts  useBuddyGateway.ts  userModes.ts  wizardHostDraft.ts  wizardOnboarding.ts  wizardOnboardingHost.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/__tests__/: buddyCapabilities.test.ts  buddyManifest.test.ts  governanceSurfaceCopy.test.ts  governanceVerticalSlice.trace.test.ts  lifecycleReceipts.test.ts  liveGovernance.test.ts  onboardingPanelModel.test.ts  presenceFixtures.test.ts  presenceProtocol.test.ts  receiptLedger.test.ts  soulActions.test.ts  surfaceManifest.test.ts  userModes.test.ts  wizardHostDraft.test.ts  wizardOnboarding.test.ts  wizardOnboardingHost.test.ts
src/core/: actionGate.ts  governanceTrace.ts  grader.ts  index.ts  panelData.ts  policies.ts  promptRenderer.ts  receiptSummary.ts  schemas.ts  types.ts  userPosture.ts
(+18 files in other folders)
