[package]
name = "bb-desktop-body"
version = "0.1.0"
edition = "2021"
description = "Border Agents desktop presence body — wlr-layer-shell spike (build-order step 2)"

[[bin]]
name = "bb-desktop-body"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = "0.19"
calloop = "0.13"
calloop-wayland-source = "0.3"
tiny-skia = "0.11"
fontdue = "0.9"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
# Presence WebSocket client (Step 4). Blocking, no async runtime; ws:// only, so no
# TLS features are pulled in.
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Decode inline base64 image bytes delivered over the presence `output` cue.
base64 = "0.22"
