[package]
name = "border-agents"
version = "0.1.0"
description = "Border Agents dock"
authors = ["Border Agents"]
edition = "2021"

[lib]
name = "border_agents_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.3", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
cairo-rs = "0.18.5"
